--- a/EmployeeProjectApi/appsettings.json
+++ b/EmployeeProjectApi/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "Default": "Server=localhost\\SQLEXPRESS;Database=EmpProjDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "Yp9$w@3!72xq5L0rZ8eBf6HcK2UaV4Md", // dev only
+    "Issuer": "EmployeeProjectApi",
+    "Audience": "EmployeeProjectApiUsers",
+    "ExpirationMinutes": 60
+  }
+
 }
